<resources>
    <string name="app_name">Auth</string>
    <string name="enter">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Введите пароль</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="vk">VK</string>
    <string name="odnoklassniki">Одноклассники</string>
    <string name="not_filled">Не заполнены все поля!</string>
    <string name="not_validate_email">Введите email правильно</string>
</resources>