<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="500dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="19sp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_stroke"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/dark_white"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:text="@string/password"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_stroke"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/dark_white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />
        <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/enter"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_stroke"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/enter"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="end|center"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/no_account"
            />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/green"
                android:gravity="start|center"
                android:textSize="15sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/registration"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="15sp"
        />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp">

            <ImageButton
                android:id="@+id/btn_vk"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/button_stroke"
                android:backgroundTint="@color/blue"
                android:src="@drawable/vk"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/vk" />

            <ImageButton
                android:id="@+id/btn_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/button_ok_stroke"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ok"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="5dp"
                android:contentDescription="@string/odnoklassniki" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

